--- a/2021-team3-sample/sprint-02/build-scripts/config
+++ b/2021-team3-sample/sprint-02/build-scripts/config
@@ -1,4 +1,4 @@
 Host   github.com
 Hostname github.com
-IdentityFile  /home/vagrant/id_rsa_2021-sampleteam-deploy-key
+IdentityFile  /home/vagrant/myrepo
 StrictHostKeyChecking no
